Bug 422890 - Unable to save file if audio track is moved from original location
Summary: Unable to save file if audio track is moved from original location
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.3.0-beta2
Platform: Microsoft Windows Microsoft Windows
: HI major
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-12 19:04 UTC by Lewis
Modified: 2020-08-05 20:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lewis 2020-06-12 19:04:56 UTC
SUMMARY


STEPS TO REPRODUCE
1. Create new file of any size.
2. Import audio file through Timeline Docker.
3. While Krita file is open, relocate the audio file from its original location (don't change the audio from within Krita either).
4. Save/Save As/Export the Krita file.

OBSERVED RESULT
Could not save <file path>
Reason: Error occurred while writing to the file.

EXPECTED RESULT
File is saved.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Problem is fixed by returning audio file to its original location while Krita is still open. It would be good to have a note to the user, that the audio file is missing.
Comment 1 Emmet O'Neill 2020-07-27 17:47:57 UTC
Yeah. I've been able to confirm this on Krita 4.3. 

Any bug that prevents an artist from saving what they're working on is a pretty big deal, so we'll prioritize fixing this one as soon as we can. Thanks for taking the time to file a bug report, Lewis. =]
Comment 2 Eoin O'Neill 2020-07-27 20:40:38 UTC
Git commit cc3745ed6efe898e962fc61def108ce67b6a20fb by Eoin O'Neill.
Committed on 27/07/2020 at 20:27.
Pushed by eoinoneill into branch 'krita/4.3'.

Fix KRA Saving Failure When Audio File is Missing

When audio file is moved after assignment, saving would fail because the file couldn't be found.
Instead of failing to save, Krita should save the user's desired file path regardless, and missing files
should be handled on next load.

M  +1    -1    plugins/impex/libkra/kis_kra_loader.cpp
M  +4    -5    plugins/impex/libkra/kis_kra_saver.cpp

https://invent.kde.org/graphics/krita/commit/cc3745ed6efe898e962fc61def108ce67b6a20fb
Comment 3 Eoin O'Neill 2020-07-29 05:26:48 UTC
Git commit 25dcdecf0692d5768bf797638407d480f9b64f6d by Eoin O'Neill.
Committed on 29/07/2020 at 03:44.
Pushed by eoinoneill into branch 'master'.

Fix KRA Saving Failure When Audio File is Missing

When audio file is moved after assignment, saving would fail because the file couldn't be found.
Instead of failing to save, Krita should save the user's desired file path regardless, and missing files
should be handled on next load.
(cherry picked from commit cc3745ed6efe898e962fc61def108ce67b6a20fb)

M  +1    -1    plugins/impex/libkra/kis_kra_loader.cpp
M  +4    -5    plugins/impex/libkra/kis_kra_saver.cpp

https://invent.kde.org/graphics/krita/commit/25dcdecf0692d5768bf797638407d480f9b64f6d