Fix KRA Saving Failure When Audio File is Missing

When audio file is moved after assignment, saving would fail because the file couldn't be found.
Instead of failing to save, Krita should save the user's desired file path regardless, and missing files
should be handled on next load.

BUG:422890
(cherry picked from commit cc3745ed6efe898e962fc61def108ce67b6a20fb)